fix kv output add button wrapping

--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -274,7 +274,7 @@ $keyframe-name = slide-up
   width space(3)
   height space(3)
   overflow hidden
-  margin space(1.5) space(1)
+  margin space(1.4) space(0.3)
   background-size 50% 50%
   background-position 50% 50%
   background-repeat no-repeat
